// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Destination Landing page should execute getServerSideProps with de locale 1`] = `
{
  "props": {
    "data": {},
    "error": "null",
    "featureToggles": {
      "kill_switch_enable_urgency_banner": false,
      "kill_switch_hide_chat_bot_pi": false,
      "kill_switch_pi_meta_search": false,
      "release_dynatrace_rum_cookie_consent": false,
      "release_one_trust_cookie_consent": false,
      "release_pi_analytics_debounce": false,
      "release_pi_auth0_login": false,
      "release_pi_bb_ccui_barrier_free_label": false,
      "release_pi_bb_ccui_choose_room_type": false,
      "release_pi_bb_ccui_hdp_image_gallery_redesign": false,
      "release_pi_bb_ccui_nonsilent_substitution_per_roomclass": false,
      "release_pi_bb_ccui_premier_plus_accessible_room": false,
      "release_pi_bb_ccui_rooms_disclaimer": false,
      "release_pi_bb_ccui_white_trip_advisor_review": false,
      "release_pi_bb_show_google_static_map": false,
      "release_pi_breakfast_promo_code": false,
      "release_pi_ccui_bb_promotion_box_code_cookie": false,
      "release_pi_discount_rate": false,
      "release_pi_display_soft_bundles": false,
      "release_pi_free_fnb_and_extras": false,
      "release_pi_group_booking_form": false,
      "release_pi_hreflang_attribute": false,
      "release_pi_new_dlp_filters": false,
      "release_pi_no_room_type_search": false,
      "release_pi_pib_ccui_city_tax_breakdown": false,
      "release_pi_price_per_night": false,
      "release_pi_promo_code_landing_page": false,
      "release_pi_promo_code_site_wide": false,
      "release_pi_redis_rq_cache": false,
      "release_pi_room_details_drawer": false,
      "release_pi_room_upgrade_popup": false,
      "release_pi_show_promotion_box": false,
      "release_pi_signup_in_header": false,
      "release_pi_sort_order_dropdown": false,
      "release_pi_summer_sale_promotion_banner": false,
      "release_pi_two_month_search": false,
      "release_pi_web_push_notifications": false,
      "release_pib_login_redirect": false,
      "release_promotions_in_hotelavailability": false,
      "release_semantic_typography_tokenization": false,
      "release_show_chat_bot_all_pages_pi": false,
    },
    "isDestinationPage": undefined,
    "isError": false,
    "isLoading": false,
    "promotionBannerData": null,
    "pushRequestClosedCountCookie": 0,
    "pushRequestClosedTimestampCookie": "0",
  },
}
`;

exports[`Destination Landing page should execute getServerSideProps with gb locale 1`] = `
{
  "props": {
    "data": {},
    "error": "null",
    "featureToggles": {
      "kill_switch_enable_urgency_banner": false,
      "kill_switch_hide_chat_bot_pi": false,
      "kill_switch_pi_meta_search": false,
      "release_dynatrace_rum_cookie_consent": false,
      "release_one_trust_cookie_consent": false,
      "release_pi_analytics_debounce": false,
      "release_pi_auth0_login": false,
      "release_pi_bb_ccui_barrier_free_label": false,
      "release_pi_bb_ccui_choose_room_type": false,
      "release_pi_bb_ccui_hdp_image_gallery_redesign": false,
      "release_pi_bb_ccui_nonsilent_substitution_per_roomclass": false,
      "release_pi_bb_ccui_premier_plus_accessible_room": false,
      "release_pi_bb_ccui_rooms_disclaimer": false,
      "release_pi_bb_ccui_white_trip_advisor_review": false,
      "release_pi_bb_show_google_static_map": false,
      "release_pi_breakfast_promo_code": false,
      "release_pi_ccui_bb_promotion_box_code_cookie": false,
      "release_pi_discount_rate": false,
      "release_pi_display_soft_bundles": false,
      "release_pi_free_fnb_and_extras": false,
      "release_pi_group_booking_form": false,
      "release_pi_hreflang_attribute": false,
      "release_pi_new_dlp_filters": false,
      "release_pi_no_room_type_search": false,
      "release_pi_pib_ccui_city_tax_breakdown": false,
      "release_pi_price_per_night": false,
      "release_pi_promo_code_landing_page": false,
      "release_pi_promo_code_site_wide": false,
      "release_pi_redis_rq_cache": false,
      "release_pi_room_details_drawer": false,
      "release_pi_room_upgrade_popup": false,
      "release_pi_show_promotion_box": false,
      "release_pi_signup_in_header": false,
      "release_pi_sort_order_dropdown": false,
      "release_pi_summer_sale_promotion_banner": false,
      "release_pi_two_month_search": false,
      "release_pi_web_push_notifications": false,
      "release_pib_login_redirect": false,
      "release_promotions_in_hotelavailability": false,
      "release_semantic_typography_tokenization": false,
      "release_show_chat_bot_all_pages_pi": false,
    },
    "isDestinationPage": true,
    "isError": false,
    "isLoading": false,
    "promotionBannerData": null,
    "pushRequestClosedCountCookie": 0,
    "pushRequestClosedTimestampCookie": "0",
  },
}
`;

exports[`Destination Landing page should match the snapshot 1`] = `
<div>
  <div
    data-testid="DestinationLandingPage"
  />
</div>
`;

exports[`Hotel Details Page - ConsentNotificationModal Behavior should render component structure correctly when consent cookie exists 1`] = `
<div>
  <div
    data-testid="DestinationLandingPage"
  />
</div>
`;

exports[`Hotel Details Page - ConsentNotificationModal Behavior should render differently when consent cookie is not set 1`] = `
<div>
  <div
    data-testid="DestinationLandingPage"
  />
</div>
`;

exports[`Hotel Details page should execute getServerSideProps with de locale 1`] = `
{
  "props": {
    "data": {},
    "error": "null",
    "featureToggles": {
      "kill_switch_enable_urgency_banner": false,
      "kill_switch_hide_chat_bot_pi": false,
      "kill_switch_pi_meta_search": false,
      "release_dynatrace_rum_cookie_consent": false,
      "release_one_trust_cookie_consent": false,
      "release_pi_analytics_debounce": false,
      "release_pi_auth0_login": false,
      "release_pi_bb_ccui_barrier_free_label": false,
      "release_pi_bb_ccui_choose_room_type": false,
      "release_pi_bb_ccui_hdp_image_gallery_redesign": false,
      "release_pi_bb_ccui_nonsilent_substitution_per_roomclass": false,
      "release_pi_bb_ccui_premier_plus_accessible_room": false,
      "release_pi_bb_ccui_rooms_disclaimer": false,
      "release_pi_bb_ccui_white_trip_advisor_review": false,
      "release_pi_bb_show_google_static_map": false,
      "release_pi_breakfast_promo_code": false,
      "release_pi_ccui_bb_promotion_box_code_cookie": false,
      "release_pi_discount_rate": false,
      "release_pi_display_soft_bundles": false,
      "release_pi_free_fnb_and_extras": false,
      "release_pi_group_booking_form": false,
      "release_pi_hreflang_attribute": false,
      "release_pi_new_dlp_filters": false,
      "release_pi_no_room_type_search": false,
      "release_pi_pib_ccui_city_tax_breakdown": false,
      "release_pi_price_per_night": false,
      "release_pi_promo_code_landing_page": false,
      "release_pi_promo_code_site_wide": false,
      "release_pi_redis_rq_cache": false,
      "release_pi_room_details_drawer": false,
      "release_pi_room_upgrade_popup": false,
      "release_pi_show_promotion_box": false,
      "release_pi_signup_in_header": false,
      "release_pi_sort_order_dropdown": false,
      "release_pi_summer_sale_promotion_banner": false,
      "release_pi_two_month_search": false,
      "release_pi_web_push_notifications": false,
      "release_pib_login_redirect": false,
      "release_promotions_in_hotelavailability": false,
      "release_semantic_typography_tokenization": false,
      "release_show_chat_bot_all_pages_pi": false,
    },
    "isDestinationPage": undefined,
    "isError": false,
    "isLoading": false,
    "promotionBannerData": null,
    "pushRequestClosedCountCookie": 0,
    "pushRequestClosedTimestampCookie": "0",
  },
}
`;

exports[`Hotel Details page should execute getServerSideProps with gb locale 1`] = `
{
  "props": {
    "data": {},
    "error": "null",
    "featureToggles": {
      "kill_switch_enable_urgency_banner": false,
      "kill_switch_hide_chat_bot_pi": false,
      "kill_switch_pi_meta_search": false,
      "release_dynatrace_rum_cookie_consent": false,
      "release_one_trust_cookie_consent": false,
      "release_pi_analytics_debounce": false,
      "release_pi_auth0_login": false,
      "release_pi_bb_ccui_barrier_free_label": false,
      "release_pi_bb_ccui_choose_room_type": false,
      "release_pi_bb_ccui_hdp_image_gallery_redesign": false,
      "release_pi_bb_ccui_nonsilent_substitution_per_roomclass": false,
      "release_pi_bb_ccui_premier_plus_accessible_room": false,
      "release_pi_bb_ccui_rooms_disclaimer": false,
      "release_pi_bb_ccui_white_trip_advisor_review": false,
      "release_pi_bb_show_google_static_map": false,
      "release_pi_breakfast_promo_code": false,
      "release_pi_ccui_bb_promotion_box_code_cookie": false,
      "release_pi_discount_rate": false,
      "release_pi_display_soft_bundles": false,
      "release_pi_free_fnb_and_extras": false,
      "release_pi_group_booking_form": false,
      "release_pi_hreflang_attribute": false,
      "release_pi_new_dlp_filters": false,
      "release_pi_no_room_type_search": false,
      "release_pi_pib_ccui_city_tax_breakdown": false,
      "release_pi_price_per_night": false,
      "release_pi_promo_code_landing_page": false,
      "release_pi_promo_code_site_wide": false,
      "release_pi_redis_rq_cache": false,
      "release_pi_room_details_drawer": false,
      "release_pi_room_upgrade_popup": false,
      "release_pi_show_promotion_box": false,
      "release_pi_signup_in_header": false,
      "release_pi_sort_order_dropdown": false,
      "release_pi_summer_sale_promotion_banner": false,
      "release_pi_two_month_search": false,
      "release_pi_web_push_notifications": false,
      "release_pib_login_redirect": false,
      "release_promotions_in_hotelavailability": false,
      "release_semantic_typography_tokenization": false,
      "release_show_chat_bot_all_pages_pi": false,
    },
    "isDestinationPage": undefined,
    "isError": false,
    "isLoading": false,
    "promotionBannerData": null,
    "pushRequestClosedCountCookie": 0,
    "pushRequestClosedTimestampCookie": "0",
  },
}
`;

exports[`Hotel Details page should match the snapshot 1`] = `
<div>
  <div
    data-testid="DestinationLandingPage"
  />
</div>
`;
